changed gaps in css in 'Unleash'

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -64,7 +64,7 @@
                   <!-- <a href="https://buy.stripe.com/bIY7uecLm32v6KQ5kB" target="_blank">
                     <button class="cta-filled">Free 7-day trial, then $50 / month </button>
 		  </a> --> 
-                  <a target="_self" href="#membership">
+                  <a target="_self" href="#description">
                     <button class="hero-price">See how it works</button>
                   </a>
                 </div> 
@@ -72,7 +72,7 @@
             </section>
             
             <!-- About Surfalytics -->
-            <section>
+            <section id="description">
               <div class="abt-section card-color">
                 <div class="abt-left">
                   <h2 class="gradient">What You Get Inside</h2>
@@ -185,6 +185,9 @@
                   <div class="txt-flex">
                     <p>or $500 / year</p>
                     <!-- <p>(34% off)</p> -->
+                  </div>
+                  <div>
+                    <p>We prefer motivation over money. Apply for a 50% <b>Motivation Grant</b> — for those who are serious about their career, but need a little help getting started</p>
                   </div>                  
                 </div>
                 <ul class="membership-ul">
