changed header at 'Unleash' section; changed grant button text

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -92,7 +92,7 @@
 
             <!-- Unleash your potential - key offers -->
           <section>
-            <h2 class="centered gradient">Unleash Your Potential</h2>
+            <h2 class="centered gradient">Why Surfalytics Members Actually Get Hired</h2>
             <div class="potential-wrap">
               <div class="potential-card card-color">
                 <h4>Real interview prep — not theory</h4>
@@ -204,7 +204,7 @@
                     <button class="cta-filled">Join now – $100 / month </button>
                   </a>  
                   <a target="_blank" href="https://buy.stripe.com/4gw8yi26I9qTb168wP">
-                    <button class="hero-price">Apply for 50% Motivation Grant</button>
+                    <button class="hero-price">Apply for 50% Grant</button>
                   </a>
 
                 </div>
