--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -53,12 +53,12 @@
               <div class="two-col hero">
                 <div class="hero">
                   <div class="h-row">
-                    <h1 class="gradient">From zero to first data job in Canada — with support, not Guesswork</h1>
+                    <h1 class="gradient">Land Your First Data Job</h1>
                   </div>
-		  <!--
+		  
                   <div class="h-row">
-                    <h1 id="profession"><span id="changingProfession">with support, not Guesswork</span></h1>
-		  </div> -->
+                    <h2><span>with Expert Support</h1>
+		  </div>
 
                   <p>Join a career-focused community that helps you master interviews, fix your resume, build real projects — and finally get that offer, even without local experience. ✨</p>
                   <!-- <a href="https://buy.stripe.com/bIY7uecLm32v6KQ5kB" target="_blank">
@@ -75,7 +75,10 @@
             <section id="description">
               <div class="abt-section card-color">
                 <div class="abt-left">
-                  <h2 class="gradient">What You Get Inside</h2>
+                  <h5>What You Get Inside</h5>
+                  <h2 class="gradient">Everything You Need<br>
+                    to Launch Your<br>
+                    Data Career</h2>
                 </div>
                 <div class="abt-right">
                   <ul class="membership-ul">
@@ -85,7 +88,7 @@
                     <li><b>Weekly progress check-ins</b> — share your wins, insights, blockers, and next steps to stay consistent and accountable.</li>
                     <li><b>A practical orientation course</b> that helps you navigate the real Data job market — what actually matters, what doesn’t, and how to focus your learning.</li>
                   </ul><p>Surfalytics gives you structure, support, and clarity in your Data job hunt — no matter if you're aiming for Canada, the US, or Europe. It’s a real-world navigation system, not just another course.</p>
-                  <a href="/pages/about">Learn more about us</a>
+                  <!-- <a href="/pages/about">Learn more about us</a> -->
                 </div>  
               </div>
             </section>
@@ -95,12 +98,12 @@
             <h2 class="centered gradient">Why Surfalytics Members Actually Get Hired</h2>
             <div class="potential-wrap">
               <div class="potential-card card-color">
-                <h4>Real interview prep — not theory</h4>
+                <h4>Real interview preparation</h4>
                 <p>Practice with mock interviews, analyze real interview recordings, and learn the exact questions companies are asking today.
                 </p>
               </div>
               <div class="potential-card card-color">
-                <h4>A resume that gets callbacks</h4>
+                <h4>Resume that gets callbacks</h4>
                 <p>Get expert feedback through resume roasting sessions and add Canadian internship experience to beat ATS filters and stand out.
                 </p>
               </div>
@@ -109,15 +112,15 @@
                 <p>Stay consistent and on track — report your wins, learnings, and goals every week, and stay motivated by others doing the same.</p>
               </div>
               <div class="potential-card card-color">
-                <h4>Learn what matters on the market</h4>
+                <h4>Insights from the Data job market</h4>
                 <p>Follow a 13-module course designed by an active industry expert. Build hands-on projects with modern tools, ready to showcase at interviews.</p>
               </div>
               <div class="potential-card card-color">
-                <h4>Career advice tailored to your path</h4>
-                <p>Get personalized feedback and guidance for your specific background, goals, and region — no more one-size-fits-all advice.</p>
+                <h4>Personalized career advice</h4>
+                <p>Get feedback and guidance for your specific background, goals, and region — no more one-size-fits-all advice.</p>
               </div>
               <div class="potential-card card-color">
-                <h4>A smart community that has your back</h4>
+                <h4>Community that has your back</h4>
                 <p>Curated job and event channels, insider info, peers who understand what you’re going through. You're not doing this alone.</p>
               </div>
             </div>
@@ -171,7 +174,7 @@
               <div class="col-left">
                 <h2 class="gradient">
                   Get Real Support<br>
-                  Build Job-Ready Skills<br>
+                  Job-Ready Skills<br>
                   Get Hired in Data
                 </h2>
                 <p>
@@ -193,11 +196,10 @@
                 <ul class="membership-ul">
                   <li>Free-7 day trial</li>
                   <li>AMA sessions about jobs, skills, and strategy</li>
-                  <li>Monthly Data projects to build your portfolio</li>
+                  <li>Data projects to build your portfolio</li>
                   <li>Resume feedback, mock interviews, career planning</li>
                   <li>Weekly progress check-ins to keep you accountable</li>
-                  <li>Workshops on SQL, LeetCode, and real interview prep</li>
-                  <li>Private community of peers and mentors</li>
+                  <!-- <li>Workshops on SQL, LeetCode, and real interview prep</li> -->
                 </ul>
                 <div class="btn-block">
                   <a href="https://buy.stripe.com/bIY7uecLm32v6KQ5kB" target="_blank">
