added links, added popup window with subscriptions

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -171,6 +171,7 @@
 
             <!-- Community membership -->
             <section id="membership" class="membership two-col">
+
               <div class="col-left">
                 <h2 class="gradient">
                   Get Real Support<br>
@@ -181,6 +182,7 @@
                   Your membership gives you access to mock interview sessions, resume reviews, weekly progress check-ins, a practical orientation course, and a curated Discord community — designed to help you stay focused and move closer to your first Data job.
                 </p>
               </div>
+
               <div class="service-card card-interactive card-color">
                 <div class="card-header">
                   <p>Membership Pricing</p>
@@ -202,16 +204,38 @@
                   <!-- <li>Workshops on SQL, LeetCode, and real interview prep</li> -->
                 </ul>
                 <div class="btn-block">
-                  <a href="https://buy.stripe.com/bIY7uecLm32v6KQ5kB" target="_blank">
-                    <button class="cta-filled">Join now – $100 / month </button>
+                  <a href="#popup-payment">
+                    <button class="cta-filled">Join now</button>
                   </a>  
-                  <a target="_blank" href="https://buy.stripe.com/4gw8yi26I9qTb168wP">
+                  <a target="_blank" href="https://forms.gle/sbxkpXxyCaDeGRQ5A">
                     <button class="hero-price">Apply for 50% Grant</button>
                   </a>
-
                 </div>
               </div>
+
+              <div id="popup-payment" class="overlay">
+                <div class="popup card-interactive card-color">   
+                    <div>
+                      <h2>Choose your perfect plan</h2>
+                      <a class="close" href="#membership">&times;</a> 
+                    </div> 
+                    <div class="txt-flex">
+                      <p>Start risk free with a 7-day trial</p>
+                    </div>
+                    <div class="btn-block">
+                      <a target="_blank" href="https://buy.stripe.com/7sIg0K8v67iL3yE9AU">
+                        <button class="cta-filled">$100 / month </button>
+                      </a>  
+                      <a target="_blank" href="https://buy.stripe.com/aEUeWG8v632vglqdRb">
+                        <button class="hero-price">$500 / month</button>
+                      </a>
+                    </div>
+                </div>
+              </div>
+
             </section>
+
+
 
             <!-- About the founder -->
             <section class="founder-card">
