update content across multiple sections, fixed popup bug on mobile, replaced swag with club500

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,8 +16,9 @@
               <a href="/pages/about/">About</a>
               <a href="/pages/testimonials-page/">Testimonials</a>
               <a href="https://surfalytics.com/#services">Services</a>
-              <a href="https://shop.surfalytics.com/" target="_blank">Swag</a>
+              <!-- <a href="https://shop.surfalytics.com/" target="_blank">Swag</a> -->
               <a href="/surfalytics/2023-06-03-Introduction.html">Course</a>
+              <a href="/pages/club500/">Club500</a>
               <div class="dropdown">
                 <div class="popover-toggle" aria-controls="dropdown-list-1" aria-haspopup="'menu" aria-expanded="false" role="button" tabindex="0">
                   <a>Career Tracks ▾</a>
@@ -49,8 +50,12 @@
               <details>
                 <summary><a href="https://surfalytics.com/#services">Services</a></summary>
               </details>
-              <details>
+              <!-- <details>
                 <summary><a href="https://shop.surfalytics.com/" target="_blank">Swag</a>
+                </summary> -->
+              <!-- </details> -->
+              <details>
+                <summary><a href="/pages/club500/">Club500</a>
                 </summary>
               </details>
               <details open>
@@ -63,7 +68,6 @@
                   <a href="/pages/bi-developer-landing/">BI Developer</a>
                 </div>
               </details>
-              <!-- <a href="/pages/club500/">Club500</a> -->
               <details>
                 <summary> <a href="/surfalytics/2023-06-03-Introduction.html">Course</a> </summary>
               </details>
